--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -5,10 +5,26 @@
   "page_action": {
     "default_popup": "popup.html"
   },
+  "icons": {
+    "128": "icon128.png",
+    "48": "icon48.png",
+    "16": "icon16.png"
+  },
   "background":{
     "scripts":["eventPage.js"],
     "persistent": false
     
   },
-  "manifest_version": 2
+  "manifest_version": 2,
+  "content_scripts":[
+    {
+      "matches": ["https://www.amazon.in/*"],
+      "js": ["content.js"]
+      
+    }
+  ],
+  "permissions":[
+    "tabs",
+    "https://www.amazon.in/*"
+  ]
 }
