--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -3,30 +3,34 @@
   "version": "1.0",
   "description": "Boycott Videshi, Buy Swadeshi",
   "page_action": {
-
-    "default_icons": {
-      "128": "icon128.png",
-      "48": "icon48.png",
-      "16": "icon16.png"
-    }
+    "default_title": "Google Mail"
+    
   },
-  
+  "icons": {
+    "128": "icon128.png",
+    "48": "icon48.png",
+    "16": "icon16.png"
+  },
+
+  "content_scripts":[
+    {
+      "matches": ["https://www.amazon.in/*"],
+      "js": ["content.js","jquery-3.5.1.min.js"]
+      
+    }
+  ],
+
   "background":{
-    "scripts":["eventPage.js"],
+    "scripts":[ "eventPage.js"],
     "persistent": false
     
   },
  
   "manifest_version": 2,
-  "content_scripts":[
-    {
-      "matches": ["https://www.amazon.in/*"],
-      "js": ["content.js", "jquery-3.1.0.min.js"]
-      
-    }
-  ],
+ 
   "permissions":[
-    "tabs",
+    "activeTab",
+    "notifications",
     "https://www.amazon.in/*",
     "https://localhost:5000/details"
   ]
