selenium headless error fixed

--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -10,7 +10,7 @@
       "16": "icon16.png"
     }
   },
-  
+
   "background":{
     "scripts":["eventPage.js"],
     "persistent": false
@@ -26,7 +26,7 @@
     }
   ],
   "permissions":[
-    "tabs",
+    "activeTab",
     "https://www.amazon.in/*",
     "https://localhost:5000/details"
   ]
