Product Origin name shown in notification

--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -3,7 +3,7 @@
   "version": "1.0",
   "description": "Boycott Videshi, Buy Swadeshi",
   "page_action": {
-    "default_title": "Google Mail"
+    "default_title": "Vocal For Local"
     
   },
   "icons": {
